--- a/handle-info/Cargo.toml
+++ b/handle-info/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 clap = "2.33"
 ntapi = "0.3"
 prettytable-rs = "0.8"
-winapi = { version = "0.3", features = ["heapapi", "ntstatus"] }
+winapi = { version = "0.3", features = ["heapapi", "ntstatus", "securitybaseapi"] }
